tests/vertical-slice/accept/supervisor_stop_basic.hew
// Exercises `supervisor_stop(sup)` end-to-end.
//
// Verifies:
//   - `spawn AppSupervisor` routes through the synthesised bootstrap body
//     (hew_supervisor_new + add_child_spec + hew_supervisor_start).
//   - `supervisor_stop(sup)` lowers to `hew_supervisor_stop` via the
//     user-name bridge and emits a CallRuntimeAbi with dest: None.
//   - main returns 0 after the stop call.
actor Worker {
    receive fn ping(_n: i64) {
        _n;
    }
}

supervisor AppSupervisor {
    strategy: one_for_one;
    intensity: 3 within 60s;

    child w1: Worker;
}

fn main() -> i64 {
    let sup = spawn AppSupervisor;
    supervisor_stop(sup);
    0
}
